RESOLVED FIXED174138
RenderThemeCocoa::mediaControlsFormattedStringForDuration is leaking NSDateComponentsFormatters
https://bugs.webkit.org/show_bug.cgi?id=174138
Summary RenderThemeCocoa::mediaControlsFormattedStringForDuration is leaking NSDateCo...
Antti Koivisto
Reported 2017-07-04 13:57:21 PDT
It is.
Attachments
patch (3.03 KB, patch)
2017-07-04 14:01 PDT, Antti Koivisto
no flags
Antti Koivisto
Comment 1 2017-07-04 14:01:32 PDT
Radar WebKit Bug Importer
Comment 2 2017-07-04 14:03:09 PDT
WebKit Commit Bot
Comment 3 2017-07-04 15:07:57 PDT
Comment on attachment 314577 [details] patch Clearing flags on attachment: 314577 Committed r219123: <http://trac.webkit.org/changeset/219123>
WebKit Commit Bot
Comment 4 2017-07-04 15:07:58 PDT
All reviewed patches have been landed. Closing bug.
Joseph Pecoraro
Comment 5 2017-07-06 16:23:03 PDT
Nice!
Note You need to log in before you can comment on or make changes to this bug.