RenderThemeCocoa::mediaControlsFormattedStringForDuration is leaking NSDateComponentsFormatters https://bugs.webkit.org/show_bug.cgi?id=174138

Reviewed by Ryosuke Niwa.

Saw a random spin here during media playback. Looks like we are leaking.

* rendering/RenderThemeCocoa.h:
* rendering/RenderThemeCocoa.mm:
(WebCore::RenderThemeCocoa::mediaControlsFormattedStringForDuration):

    Reuse NSDateComponentsFormatter.


Canonical link: https://commits.webkit.org/190975@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@219123 268f45cc-cd09-0410-ab3c-d52691b4dbfc